[gd_scene load_steps=4 format=3 uid="uid://bequugkc2akh6"]

[ext_resource type="Script" path="res://assets/Scripts/end_scene.gd" id="1_xt0ey"]
[ext_resource type="Texture2D" uid="uid://bq6cksu3x1cef" path="res://assets/mockup/Rectangle.webp" id="3_15fx0"]
[ext_resource type="FontFile" uid="uid://citphocjlmy8u" path="res://TradeGothicLTS.otf" id="3_hnadc"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998371, 1.00368)
script = ExtResource("1_xt0ey")

[node name="DestinationBackground" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.32549)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer2" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -34.0
offset_right = 121.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13
alignment = 1

[node name="BtnRestart" type="Button" parent="BoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnadc")
theme_override_font_sizes/font_size = 25
text = "Recommencer"

[node name="BtnCredit" type="Button" parent="BoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnadc")
theme_override_font_sizes/font_size = 25
text = "Crédits
"

[node name="BtnExit" type="Button" parent="BoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnadc")
theme_override_font_sizes/font_size = 25
text = "Quitter"

[node name="BoxContainer" type="BoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.5
offset_top = 40.0
offset_right = 138.5
offset_bottom = 136.0
grow_horizontal = 2
vertical = true

[node name="Label" type="Label" parent="BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnadc")
theme_override_font_sizes/font_size = 64
text = "Félicitations !"

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="LabelScoreEnd" type="Label" parent="BoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score: "
horizontal_alignment = 1

[node name="ScoreEnd" type="Label" parent="BoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="LabelDestination" type="Label" parent="BoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Vous êtes arrivé à :"

[node name="Destination" type="Label" parent="BoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -120.0
offset_right = 67.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_15fx0")

[node name="BoxContainer3" type="BoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
vertical = true

[node name="LabelDoesUKnow" type="Label" parent="BoxContainer3"]
clip_contents = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnadc")
theme_override_font_sizes/font_size = 20
text = "Le saviez-vous ?"
horizontal_alignment = 1

[node name="LabelTrueStory" type="Label" parent="BoxContainer3"]
clip_contents = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hnadc")
theme_override_font_sizes/font_size = 30
text = "La flotte de FrenchBee est composé à 100% d'A350"
horizontal_alignment = 1

[connection signal="pressed" from="BoxContainer2/BtnRestart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="BoxContainer2/BtnCredit" to="." method="_on_btn_credit_pressed"]
[connection signal="pressed" from="BoxContainer2/BtnExit" to="." method="_on_btn_exit_pressed"]
